
26-09-2019, Coruja
[items/multis/multis_ships.scp]: Removed duplicated MULTIDEFs
[items/sphere_item_deco_furniture.scp]: Added missing mailboxes and kitchen set items
[items/sphere_item_holiday_halloween.scp]: Added publish 106 items
[items/sphere_item_quests.scp]: Added Forgotten Treasures, Forsaken Foes and The Fellowship items
[items/sphere_item_resources.scp]: Added publish 106 items
[systems/sphere_system_aquarium.scp]: Added publish 106 items

27-09-2019, Coruja
Changed: Misc improvements on account connection process.
[sphere.ini]: Removed LocalIPAdmin setting for security purposes

30-09-2019, Coruja
Changed: Removed NEWPASSWORD account function for security purposes. To set/change account password, use PASSWORD or MD5PASSWORD instead.
Changed: Improved internal regex engine (STRREGEX function).

02-10-2019, Coruja
Changed: Improved internal random number generator engine (RAND function).

16-10-2019, Coruja
Fixed: Accounts being created with FIRSTCONNECTDATE/LASTCONNECTDATE property already set.
Fixed: Linux build not enabling console text colors on modern terminals.
Fixed: Linux build not showing console exceptions.
[sphere_msgs.scp]: Removed unused messages 'msg_acc_badpass', 'msg_acc_needpass', 'msg_acc_wcli', 'console_no_admin', 'console_welcome_1'

19-10-2019, Coruja
Changed: Updated internal SQLite libs v3.29.0 to v3.30.1.

24-10-2019, Coruja
Fixed: Linux build returning "Account already in use" message even when the account is not in use.
[sphere_msgs.scp]: Removed unused messages 'msg_acc_passclear', 'msg_acc_passclear_relog'

26-10-2019, Coruja
Fixed: WHILE loop not increasing <LOCAL._WHILE> counter correctly.

31-10-2019, Coruja
Changed: OF_OSIMultiSight optional feature on sphere.ini now will always show items that have CAN=can_i_block set.
Changed: Logout inside moving ships will not make it stop anymore.
Fixed: Ships not moving correctly objects inside it when there's too many objects to move.