@@ -305,6 +305,10 @@ SuppressCapitals=0
 // COMBATF_NOPOISONHIT			02000 // Disables old (55i like) poisoning style (0~100% chance based on Poisoning skill for monsters, or 50% chance for poisoned weapons)
 //CombatFlags=0
 
+// Delay (in tenths of second) to start next swing on Archery skill after the char stop moving (NOTE: this is only used when COMBATF_ARCHERYCANMOVE is disabled)
+// Recommended values by era: pre-AOS=10, AOS=5, SE=2
+CombatArcheryMovementDelay=10
+
 // Damage formula to use on physical combat
 // 0 = Sphere custom
 // 1 = pre-AOS
